--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,30 @@
           <release>12</release>
         </configuration>
       </plugin>
+      
+	  <plugin>
+    	<groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+        <descriptorRefs>
+        	<descriptorRef>jar-with-dependencies</descriptorRef>
+        </descriptorRefs>
+        	<archive>
+            	<manifest>
+            		<mainClass>Main</mainClass>
+            	</manifest>
+        	</archive>
+        </configuration>
+        <executions>
+        	<execution>
+        		<id>make-assembly</id>
+                <phase>package</phase>
+                <goals>
+                	<goal>single</goal>
+                </goals>
+            </execution>
+        </executions>
+      </plugin>      
     </plugins>
   </build>
   <dependencies>
